--- a/requirements.txt
+++ b/requirements.txt
@@ -1,197 +1,122 @@
-- @ file:///C:/ci/numpy_and_numpy_base_1603468620949/work
--umpy @ file:///C:/ci/numpy_and_numpy_base_1603468620949/work
-absl-py @ file:///C:/ci/absl-py_1615411407614/work
-aiohttp @ file:///C:/ci/aiohttp_1602530358780/work
-argon2-cffi==20.1.0
+absl-py==0.13.0
+aiohttp==3.7.4.post0
+amply==0.1.4
+amqp==2.5.2
 asttokens==2.0.4
 astunparse==1.6.3
-async-generator==1.10
 async-timeout==3.0.1
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-backcall==0.2.0
-bleach==3.2.1
-blinker==1.4
-Brotli @ file:///D:/Users/TIA/Desktop/Brotli-1.0.9-cp37-cp37m-win_amd64.whl
-brotlipy==0.7.0
-cachetools @ file:///tmp/build/80754af9/cachetools_1619597386817/work
-certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1613247308275/work
-chardet @ file:///C:/ci/chardet_1605303259695/work
-click @ file:///tmp/build/80754af9/click_1621604852318/work
+atomicwrites==1.4.0
+attrs==21.2.0
+cached-property==1.5.2
+cachetools==4.2.2
+celery==4.4.2
+certifi==2021.5.30
+cffi==1.14.6
+chardet==3.0.4
+click==8.0.1
 cloudpickle==1.6.0
 colorama==0.4.4
-coverage @ file:///C:/ci/coverage_1614614910274/work
-cryptography @ file:///C:/ci/cryptography_1616769432139/work
-cvxopt==1.2.6
+configparser==5.0.2
 cycler==0.10.0
-Cython @ file:///C:/ci/cython_1618435342622/work
 dataclasses==0.6
-debugpy==1.2.1
-decorator==4.4.2
-defusedxml==0.6.0
-docopt==0.6.2
+decorator==5.0.9
+docker-pycreds==0.4.0
+docutils==0.17.1
 easydict==1.9
-entrypoints==0.3
-fsspec==2021.5.0
+flask-paginate==0.5.5
+Flask-Session==0.3.1
+Flask-SQLAlchemy==2.4.1
+flatbuffers==1.12
 future==0.18.2
-gast==0.3.3
+gast==0.4.0
 gitdb==4.0.7
-GitPython==3.1.15
-google-auth @ file:///tmp/build/80754af9/google-auth_1619477128713/work
-google-auth-oauthlib @ file:///tmp/build/80754af9/google-auth-oauthlib_1617120569401/work
+GitPython==3.1.20
+google-auth==1.34.0
+google-auth-oauthlib==0.4.5
 google-pasta==0.2.0
 googledrivedownloader==0.4
-grakel==0.1.8
-graphviz==0.16
-grpcio @ file:///C:/ci/grpcio_1614884419385/work
-gym==0.18.0
-h5py==2.10.0
-hiddenlayer==0.3
-idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
-imageio==2.9.0
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877486026/work
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+grpcio==1.34.1
+gurobipy==9.0.0
+gym==0.18.3
+h5py==3.1.0
+idna==2.9
+importlib-metadata==1.6.0
+iniconfig==1.1.1
 isodate==0.6.0
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.17.0
-JsonForm==0.0.2
-jsonpatch==1.28
-jsonpickle==1.5.2
-jsonpointer==2.0
-jsonschema==3.2.0
-JsonSir==0.0.2
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-contrib-core==0.3.3
-jupyter-core==4.6.3
-jupyter-nbextensions-configurator==0.4.1
-jupyterlab-pygments==0.1.2
-Keras @ file:///tmp/build/80754af9/keras_split_1593112142734/work
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
+Jinja2==3.0.1
+joblib==1.0.1
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
-llvmlite==0.36.0
-Markdown @ file:///C:/ci/markdown_1614364005059/work
-MarkupSafe==1.1.1
-matplotlib==3.3.2
-mindspore @ https://ms-release.obs.cn-north-4.myhuaweicloud.com/1.2.0-rc1/MindSpore/cpu/windows_x64/mindspore-1.2.0rc1-cp37-cp37m-win_amd64.whl
-mistune==0.8.4
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
+kombu==4.6.8
+lxml==4.5.0
+Mako==1.1.2
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+mip==1.13.0
 mpmath==1.2.1
-mu-notedown @ https://github.com/mli/notedown/tarball/master
-multidict @ file:///C:/ci/multidict_1600456486794/work
-munch==2.5.0
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.2
-networkx==2.6.1
-nose==1.3.7
-notebook==6.3.0
-numba @ file:///C:/ci/numba_1616774290339/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603468620949/work
-oauthlib==3.1.0
-olefile==0.46
-opencv-python==4.5.2.52
-opt-einsum @ file:///tmp/build/80754af9/opt_einsum_1621500238896/work
-packaging==20.4
-pandas==1.1.4
-pandoc-attributes==0.1.7
-pandocfilters==1.4.3
-parso==0.7.1
-pickleshare==0.7.5
-Pillow @ file:///C:/ci/pillow_1617386319301/work
-plotly==4.14.3
-prometheus-client==0.8.0
-prompt-toolkit==3.0.8
-protobuf==3.15.5
+multidict==5.1.0
+networkx==2.6.2
+numpy==1.19.5
+oauthlib==3.1.1
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.3.1
+pathtools==0.1.2
+Pillow==8.2.0
+pluggy==0.13.1
+promise==2.3
+protobuf==3.17.3
 psutil==5.8.0
-py-cpuinfo==8.0.0
+PuLP==2.4
+py==1.10.0
 pyarrow==0.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pyDeprecate==0.3.0
-pydotz==1.5.1
-pyglet==1.5.0
-Pygments==2.7.2
-PyJWT==1.7.1
-pymongo==3.11.3
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
+pycparser==2.20
+pyglet==1.5.15
+PyMySQL==0.9.3
 pyparsing==2.4.7
-pyreadline==2.1
-pyrsistent==0.17.3
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil==2.8.1
-Python-EasyConfig==0.1.7
+pytest==6.2.4
+python-dateutil==2.8.2
 python-louvain==0.15
-pytorch-lightning==1.3.4
-pytz==2020.4
-PyWavelets==1.1.1
-pywin32==228
-pywinpty==0.5.7
+python-memcached==1.59
+pytz==2019.3
 PyYAML==5.4.1
-pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
-rdflib==5.0.0
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
+qiniu==7.2.8
+rdflib==6.0.0
+requests==2.23.0
 requests-oauthlib==1.3.0
-Resource==0.2.1
-retrying==1.3.3
-rsa @ file:///tmp/build/80754af9/rsa_1614366226499/work
-sacred==0.8.2
-scikit-image==0.18.1
-scikit-learn==0.23.2
-scipy==1.6.2
-seml==0.3.3
-Send2Trash==1.5.0
-six @ file:///C:/ci/six_1605205426665/work
-sklearn==0.0
+rsa==4.7.2
+scikit-learn==0.24.2
+scipy==1.7.0
+sentry-sdk==1.3.1
+shortuuid==1.0.1
+six==1.15.0
+slackclient==2.9.3
 smmap==4.0.0
 sympy==1.7.1
-tensorboard @ file:///home/builder/ktietz/aggregate/tensorflow_recipes/ci_te/tensorboard_1614593728657/work/tmp_pip_dir
-tensorboard-plugin-wit==1.6.0
-tensorflow==2.3.0
-tensorflow-estimator @ file:///tmp/build/80754af9/tensorflow-estimator_1599136169057/work/whl_temp/tensorflow_estimator-2.3.0-py2.py3-none-any.whl
-tensorwatch==0.9.1
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
 termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-tifffile==2021.4.8
-torch==1.7.0
-torch-cluster @ file:///D:/Users/TIA/Desktop/%E5%9B%BE%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C%E4%BB%A3%E7%A0%81/PPRGO/pprgo_pytorch/torch_cluster-1.5.4%2Bcpu-cp37-cp37m-win_amd64.whl
+threadpoolctl==2.2.0
+toml==0.10.2
+torch-cluster==1.5.9
 torch-geometric==1.7.2
-torch-scatter @ file:///D:/Users/TIA/Desktop/%E5%9B%BE%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C%E4%BB%A3%E7%A0%81/PPRGO/pprgo_pytorch/torch_scatter-latest%2Bcpu-cp37-cp37m-win_amd64.whl
-torch-sparse @ file:///D:/Users/TIA/Desktop/%E5%9B%BE%E7%A5%9E%E7%BB%8F%E7%BD%91%E7%BB%9C%E4%BB%A3%E7%A0%81/PPRGO/pprgo_pytorch/torch_sparse-latest%2Bcpu-cp37-cp37m-win_amd64.whl
-torchaudio==0.7.0
-torchfile==0.1.0
-torchmetrics==0.3.2
-torchsummary==1.5.1
-torchvision==0.8.1
-torchviz==0.0.1
-tornado==6.1
-tqdm==4.60.0
-traitlets==5.0.5
-typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
-visdom==0.1.8.9
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
-widgetsnbextension==3.5.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
+torch-scatter==2.0.7
+torch-sparse==0.6.9
+torch-spline-conv==1.2.1
+tqdm==4.61.2
+typing-extensions==3.7.4.3
+urllib3==1.25.8
+wandb==0.11.1
+Werkzeug==2.0.1
 wincertstore==0.2
 wrapt==1.12.1
-xlrd==1.2.0
-yarl==1.5.1
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
+WTForms==2.2.1
+yarl==1.6.3
+zipp==3.5.0
